Change site name and update home page content

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,12 +2,12 @@
   	<div class="col-md-8 center-block">
     </br>
     </br>
-      <h1>InciBlurbs.</h1>
-      <h1>Save and Share Fire Messenging</h1>
+      <h1>Alaska Team PIOs</h1>
+      <h1>Status and Availablity</h1>
     </div>
   </br>
   	    <div class="col-md-8 center-block">
-  	<p>Whether you are writing the morning update or answering comments on facebook, avoid wasting time writing the same messages over and over. Save common messages as a blurb that you can copy and paste. Maintain consistency with your staff by sharing popular blurs. At a loss for words? Search <strong>#hashtags</strong> for stock responses. Maybe someone has arleady articulated what you wish to say :)</p>
+  	<p>2020 will be a season like no other and we're all going to need to step up or game. Be prepared for non-standard assignments. Make sure to keep current with your status, location, and whether you are available for the field or remote only. There will likely be lots of training opportunities. Have fun. Be safe. </p>
     </div> 
 
 </div>
@@ -17,15 +17,12 @@
   <div class="container">
     <div id="todo-block" class="col-md-8 center-block">
       <h1>TODO</h1>
-      <p>This application is a work in progress. The basic functionality is here and I will add the following improvements as time allows. There are probably some bugs and they will be found by use. Let me know if you find a problem and I will see what I can do to fix it. Below is a list of needs. If you have any suggestions feel free to <%= link_to 'contact me', contact_path %>.</p>
+      <p>This application is a clone of an <%= link_to 'app', "https://www.inciblurbs.com/" %> I built to share messenging for PIOs in general. The basic functionality is here and I will add the following improvements as time allows. There are probably some bugs and they will be found by use. Let me know if you find a problem and I will see what I can do to fix it. Below is a list of needs. If you have any suggestions feel free to <%= link_to 'contact me', contact_path %>.</p>
       <ul>
-        <li>Basic style improvements and branding.</li>
         <li>Add comments to blurbs.</li>
         <li>Add feed so messages can be passed internally.</li>
         <li>Search filtering for multiple tags.</li>
         <li>Strategy for organizing a huge number of tags.</li>
-        <li>Make footer 'sticky.'</li>
-
       </ul>
     </div>
   </div>
