--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title><%= content_for?(:title) ? "InciBlurbs | " + yield(:title) : "InciBlurbs" %></title>
-  <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Save and share reusable fire messenging with InciBlurbs" %>">
+  <title><%= content_for?(:title) ? "Alaska Team | " + yield(:title) : "Alaska Team" %></title>
+  <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Save and share reusable fire messenging with Alaska Team" %>">
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -27,7 +27,7 @@ controller and action allows the implementation of page-specific CSS and JS %>
           </button>
           <a class="navbar-brand" href=<%= root_path %>>
             <%#= image_tag 'name.png',size: "80x35" %>
-            <h4><strong>InciBlurbs</strong></h4>
+            <h4><strong>Alaska Team</strong></h4>
           </a>
         </div>
 
