--- a/app/views/layouts/_base_menu_items.html.erb
+++ b/app/views/layouts/_base_menu_items.html.erb
@@ -2,3 +2,4 @@
 regardless of their roles %>
 <li><%= link_to t('navigation.pios'), users_path %></li>
 <li><%= link_to t('navigation.blurbs'), blurbs_path %></li>
+<li><%= link_to t('navigation.teams'), blurbs_path %></li>
