--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
  *= require select2
  *= require sweetalert2/dist/sweetalert2
  *= require select2-bootstrap
+ *= require bootstrap-datepicker
 
 
  *= require_tree .
