--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,22 +69,23 @@ controller and action allows the implementation of page-specific CSS and JS %>
 
   <main role="main">
     <div class="container">
-      <div id="flash-messages" class="row">
+      <!-- <div id="flash-messages" class="row">
         <%# Rails flash messages styled for Bootstrap 3.0 %>
-        <% flash.each do |type, message| %>
+        <%# flash.each do |type, message| %>
           <%# Checking if the message is a string is required to avoid the
           Devise timeoutable module from creating a flash message containing
           "true". This is a temporary fix as it was just fixed in Devise (but
           not on the master branch yet) See:
           https://github.com/plataformatec/devise/issues/1777 %>
-          <% if message.is_a?(String) %>
-            <%= content_tag :div, class: "alert #{bootstrap_class_for(type)} alert-dismissable", role: "alert" do %>
+          <%# if message.is_a?(String) %>
+            <%#= content_tag :div, class: "alert #{bootstrap_class_for(type)} alert-dismissable", role: "alert" do %>
               <button type="button" class="close" data-dismiss="alert"><i class="glyphicon glyphicon-remove-circle"></i></button>
-              <%= message %>
-            <% end %>
-          <% end %>
-        <% end %>
-      </div><!-- flash-messages -->
+              <%#= message %>
+            <%# end %>
+          <%# end %>
+        <%# end %>
+      </div>
+      < !-- flash-messages -->
 
       <%# Main content %>
       <%= content_for?(:main_contents) ? yield(:main_contents) : yield %>
@@ -97,6 +98,7 @@ controller and action allows the implementation of page-specific CSS and JS %>
     <div class="container-fluid footer text-center">
       <div class="row">
         <footer class="footer">
+    <%#= debug(params) if Rails.env.development? %>
           <div class="container">
             <p class="">&copy; 2018 Incident Response Lab</p>
           </div>
