--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -14,6 +14,11 @@
       </div>
 
       <div class="field">
+        <%= form.label :complexity %>
+        <%= form.select :complexity, [['Type 1', 'Type 1'], ['Type 2', 'Type 2']], {prompt: "SET TYPE"}, { id: "team-complexity", class: "form-control" } %>
+      </div>
+
+      <div class="field">
         <%= form.label(:aapl, "IC") %>
         <%= form.text_field :ic, id: :team_ic, class: "form-control" %>
       </div>
@@ -32,7 +37,6 @@
       <div class="field">
         <%= form.label :status %>
         <%= form.select :status, [['Up On Ration', 'Up On Ration'], ['Available', 'Available'], ['Unavailable', 'Unavailable'], ['Assigned', 'Assigned']], {prompt: "SET STATUS"}, { id: "team-status", class: "form-control" } %>
-        <p id="demo"></p>
       </div>
 
       <div class="field if-assigned">
