--- a/app/views/teams/_trainees_form.html.erb
+++ b/app/views/teams/_trainees_form.html.erb
@@ -10,7 +10,7 @@
       </br>
     </div>
     <%= form_for @trainee do |f| %>
-      <div><%= f.select :user_id, options_for_select(User.all.collect { | user | [user.first_name, user.id] }), {prompt: "ADD A TRAINEE"}, { class: "form-control" } %></div>
+      <div><%= f.select :user_id, options_for_select(User.all.collect { | user | [user.full_name, user.id] }), {prompt: "ADD A TRAINEE"}, { class: "form-control", required: true } %></div>
       <%= f.hidden_field :team_id, value: @team.id %>
       <div><%= f.submit "ADD", class: "btn btn-info btn-tiny sm-margin-top " %></div>
     <% end %>
