Add remote only to user show

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
     </div>
   </br>
   	    <div class="col-md-8 center-block">
-  	<p>2020 will be a season like no other and we're all going to need to step up or game. Be prepared for non-standard assignments. Make sure to keep current with your status, location, and whether you are available for the field or remote only. There will likely be lots of training opportunities. Have fun. Be safe. </p>
+  	<p>2020 will be a season like no other and we're all going to need to step up or game. Be prepared for non-standard assignments. </p><p>Make sure to keep current with your status, location, and whether you are available for the field or remote only. There will likely be lots of training opportunities. </p><p>Have fun. Be safe. </p>
     </div> 
 
 </div>
