--- a/app/views/devise/registrations/_custom_fields.html.erb
+++ b/app/views/devise/registrations/_custom_fields.html.erb
@@ -26,6 +26,12 @@
   <%= f.select :status, options_for_select([['Available', 1], ['On Assignment', 2], ['Unavailable', 3]], @user.status ), {prompt: ""}, { class: "form-control" }   %>
 </div>
 <div class="form-group">
+  <p class="small-8 small-centered columns">
+   <%= f.check_box :remote_only %>
+   <%= f.label :remote_only %>
+  </p>
+</div>
+<div class="form-group">
   <%= f.label :qualification %>
   <%#= f.text_field :qualification, class: "form-control" %>
   <%= f.select :qualification, options_for_select([['PIO1'], ['PIO2'], ['PIOF']], @user.qualification),  {prompt: ""}, class: "form-control" %>
