--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,8 +26,13 @@
             views%>
             <%= render partial: "custom_fields", locals: {f: f} %>
             
+            <div class="form-group required">
+              <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes') %>)</i>
+              <%= f.password_field :current_password, class: "form-control", required: true %>
+            </div>
+
             <div class="form-group">
-              <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
+              <%= f.label 'New password' %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
               <%= f.password_field :password,
                                    autocomplete: "off",
                                    class: "form-control" %>
@@ -35,10 +40,6 @@
             <div class="form-group">
               <%= f.label :password_confirmation %>
               <%= f.password_field :password_confirmation, class: "form-control"  %>
-            </div>
-            <div class="form-group required">
-              <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes') %>)</i>
-              <%= f.password_field :current_password, class: "form-control", required: true %>
             </div>
 
             <%= f.submit t('.update', default: "Update"),
