Add alternates and trainees panel

--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -37,6 +37,10 @@ h1#team-name:hover {
   font-size: 2rem !important;
   margin-top: 3px;
 }
+.small-text {
+  font-size: .75em !important;
+  margin-top: 7px;
+}
 .btn-light {
   background-color: #ddd;
 }
