--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -31,7 +31,7 @@
       <div class="field">
         <%= form.label(:aapl,"Lead PIO") %>
         <%#= form.collection_select :lead, User.all, :id, :first_name, class: "form-control" %>
-        <%= form.select :lead, options_for_select(User.all.collect { | user | [user.first_name, user.id] }), {prompt: "CHOOSE LEAD"}, {class: "form-control"} %>
+        <%= form.select :lead, options_for_select(User.all.collect { | user | [user.full_name, user.id] }), {prompt: "CHOOSE LEAD"}, {class: "form-control"} %>
       </div>
 
       <div class="field">
