Remove contact form link

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
   <div class="container">
     <div id="todo-block" class="col-md-8 center-block">
       <h1>TODO</h1>
-      <p>This application is a clone of an <%= link_to 'app', "https://www.inciblurbs.com/" %> I built to share messenging for PIOs in general. The basic functionality is here and I will add the following improvements as time allows. There are probably some bugs and they will be found by use. Let me know if you find a problem and I will see what I can do to fix it. Below is a list of needs. If you have any suggestions feel free to <%= link_to 'contact me', contact_path %>.</p>
+      <p>This application is a clone of an <%= link_to 'app', "https://www.inciblurbs.com/" %> I built to share messenging for PIOs in general. The basic functionality is here and I will add the following improvements as time allows. There are probably some bugs and they will be found by use. Let me know if you find a problem and I will see what I can do to fix it. Below is a list of needs. If you have any suggestions feel free to me at bwoodreid@gmail.com</p>
       <ul>
         <li>Add comments to blurbs.</li>
         <li>Add feed so messages can be passed internally.</li>
