--- a/app/assets/stylesheets/utility-classes.scss
+++ b/app/assets/stylesheets/utility-classes.scss
@@ -185,3 +185,39 @@
   min-height: 700px;
 }
 
+/* buttons*/
+
+.edit-button {
+  padding-left: 9px !important;
+  /*padding-top: 8px !important;*/
+  text-align: center;
+  font-size: 1.2em !important;
+  -moz-border-radius: 20px/20px !important;
+  -webkit-border-radius: 20px 20px !important;
+  border-radius: 20px/20px !important; 
+  width: 35px;
+  height: 35px;
+  color: black;
+}
+
+.new-button {
+  margin-left: -6px !important;
+  margin-top: -1px;
+  font-size: 2.5em !important;
+  font-weight: 500;
+  color: black;
+  line-height: 15px;
+}
+.new-button-back {
+  padding-left: -10px !important;
+  padding-top: -15px !important;
+  -moz-border-radius: 20px/20px !important;
+  -webkit-border-radius: 20px 20px !important;
+  border-radius: 20px/20px !important; 
+  width: 35px;
+  height: 35px;
+  background-color: #ddd;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+}
