--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -66,7 +66,7 @@
 
 
       <div class="actions">
-        <%= form.submit "SUBMIT", class: "btn btn-info" %>
+        <%= form.submit "SUBMIT", class: "btn btn-info" %>  <%= link_to "CANCEL", team_path(@team), id: 'cancel-roster-edit', class: "btn btn-light btn-tiny" %>
       </div>
     <% end %>
 
