--- a/app/assets/stylesheets/blurbs.scss
+++ b/app/assets/stylesheets/blurbs.scss
@@ -7,9 +7,10 @@
     padding-left: 0;
   }
 }
-// #fixed-until {
-//   position:fixed; top:10; left: 10;
-// }
+/*#fixed-until {
+position:fixed; top:10; 
+left: 10;
+}*/
 #blurb-hash-holder {
   margin-top: 45px;
   min-height: 500px;
