--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -44,3 +44,8 @@ h1#team-name:hover {
 .btn-light {
   background-color: #ddd;
 }
+.toggle-icon {
+  font-size: 1.2em;
+  margin-top: 3px;
+  margin-right: 3px;
+}
