--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -38,25 +38,29 @@
       </h1>
     </div>
     <div class="panel-body slide-panel">
-      <% if @team.type_1  %>
-      <p>Alternates  – <%= display_type1_alternates %>
-      </p>
-      <% end %>
+      <% if !@team.type_1 && !@team.type_2 %>
+        <% if @team.type_1  %>
+        <p>Alternates  – <%= display_type1_alternates %>
+        </p>
+        <% end %>
 
-      <% if @team.type_2  %>
-      <p>Alternates  – <%= display_type2_alternates %>
-      </p>
-      <% end %>
+        <% if @team.type_2  %>
+        <p>Alternates  – <%= display_type2_alternates %>
+        </p>
+        <% end %>
 
-      <% if @team.type_1  %>
-      <p>Trainees  – <%= display_type1_trainees %>
-  
-      </p>
-      <% end %>
-      
-      <% if @team.type_2  %>
-      <p>Trainees  – <%= display_type2_trainees %>
-      </p>
+        <% if @team.type_1  %>
+        <p>Trainees  – <%= display_type1_trainees %>
+    
+        </p>
+        <% end %>
+        
+        <% if @team.type_2  %>
+        <p>Trainees  – <%= display_type2_trainees %>
+        </p>
+        <% end %>
+      <% else %>
+        <p>No Alternates or Trainees set.</p>
       <% end %>
 
       <% if @team.status == "Assigned" %>
