--- a/app/views/devise/registrations/_custom_fields.html.erb
+++ b/app/views/devise/registrations/_custom_fields.html.erb
@@ -46,7 +46,7 @@
 </div>
 <div class="form-group">
   <%= f.label :state %>
-  <%= f.select :state, options_for_select(Collections::STATES, @user.state), {}, class: "form-control"  %>
+  <%= f.select :state, options_for_select(Collections::STATES, @user.state), {prompt: ""}, class: "form-control"  %>
 </div>
 <div class="form-group">
   <%= f.label :phone %>
