Change how trainees and alternates are created

--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -49,3 +49,10 @@ h1#team-name:hover {
   margin-top: 3px;
   margin-right: 3px;
 }
+/* Forms */
+#add-alternate-form {
+  display: none;
+}
+#add-trainee-form {
+  display: none;
+}
