--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -3,8 +3,8 @@
 
   <%= render 'form', team: @team %>
   <%= render 'shared_form', team: @team %>
-  <%= render 'alternates_form', team: @team %>
-  <%= render 'trainees_form', team: @team %>
+  <%#= render 'alternates_form', team: @team %>
+  <%#= render 'trainees_form', team: @team %>
 
   <%= link_to 'Cancel', team_path(@team), class: 'btn btn-light' %>
 </div>
