--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -38,14 +38,33 @@
         </h1>
       </div>
      <div class="panel-body slide-panel">
-      <div><strong>Type 1</strong></div>
-        <% type_1_teams.each do |t|  %>
-          <div><%= t.display_trainees %></div>
+      <div>
+        <strong>Type 1</strong>
+      </div>
+        <div>
+          <%= display_trainees(@trainees.type_1) %>
+          </div>
+      <div>
+        <strong>Type 2</strong>
+      </div>
+      <div>
+        <%= display_trainees(@trainees.type_2) %>
+      </div>
+      <div><%= submit_tag "ADD", id: 'add-trainee', class: "btn add-link sm-margin-top " %></div>
+      <div id="add-trainee-form">
+        <%= form_for @trainee do |f| %>
+          <div>
+            <br>
+            <%= f.label "trainee" %>
+            <%= f.select :user_id, options_for_select(User.all.collect { | user | [user.full_name, user.id] }), {prompt: "ADD TRAINEE"}, { class: "form-control", required: true } %></div>
+          <div class="field">
+            <%= f.label :complexity %>
+            <%= f.select :complexity, [['Type 1', 'Type 1'], ['Type 2', 'Type 2']], {prompt: "SET TYPE"}, { class: "form-control" } %>
+          </div>
+          <div><%= f.submit "ADD", class: "btn btn-info btn-tiny sm-margin-top " %></div>
         <% end %>
-      <div><strong>Type 2</strong></div>
-        <% type_2_teams.each do |t|  %>
-          <div><%= t.display_trainees %></div>
-        <% end %>
+      </div>
+
      </div>
     </div>
   </div>
@@ -58,16 +77,37 @@
         <span class="float-right toggle-icon angle-up hidden"><%= fa_icon('angle-up') %></span></h1>
       </div>
      <div class="panel-body slide-panel">
-      <div><strong>Type 1 Team</strong></div>
-        <% type_1_teams.each do |t|  %>
-          <div><%= t.display_alternates %></div>
+      <div>
+        <strong>Type 1 Team</strong>
+      </div>
+      <div>
+        <%= display_alternates(@alternates.type_1) %>
+      </div>
+              
+      <div>
+        <strong>Type 2 Teams</strong>
+      </div>
+        
+      <div>
+        <%= display_alternates(@alternates.type_2) %>
+      </div>
+        
+
+      <div><%= submit_tag "ADD", id: 'add-alternate', class: "btn add-link sm-margin-top " %></div>
+      <div id="add-alternate-form">
+        <%= form_for @alternate do |f| %>
+          <div>
+            <br>
+            <%= f.label "Alternate" %>
+            <%= f.select :user_id, options_for_select(User.all.collect { | user | [user.full_name, user.id] }), {prompt: "ADD ALTERNATE LEAD"}, { class: "form-control", required: true } %></div>
+          <div class="field">
+            <%= f.label :complexity %>
+            <%= f.select :complexity, [['Type 1', 'Type 1'], ['Type 2', 'Type 2']], {prompt: "SET TYPE"}, { id: "team-complexity", class: "form-control" } %>
+          </div>
+          <div><%= f.submit "ADD", class: "btn btn-info btn-tiny sm-margin-top " %></div>
         <% end %>
-         
-          
-      <div><strong>Type 2 Teams</strong></div>
-        <% type_2_teams.each do |t|  %>
-          <div><%= t.display_alternates %></div>
-        <% end %>
+      </div>
+
      </div>
     </div>
   </div>
